1/27/24 text centered in delete bug report modal, nav logout icon overlap fixed, minor live validation error fixed for conf password

--- a/PMT/PMT/Styles/site.scss
+++ b/PMT/PMT/Styles/site.scss
@@ -92,9 +92,6 @@ nav {
     background-color: $cHeader;
   }
   .logout-btn-wrap {
-    position: absolute;
-    left: 15%;
-    bottom: 5%;
     img {
       @include Img-Round(3rem);
       border-radius: 0rem;
