--- a/PMT/PMT/wwwroot/css/bugTracking.css
+++ b/PMT/PMT/wwwroot/css/bugTracking.css
@@ -124,6 +124,7 @@
 }
 #delBugReportModal .del-bug-report-modal h3 {
   width: 75%;
+  text-align: center;
 }
 #delBugReportModal .del-bug-report-modal .btn-wrap {
   margin-top: 3vh;
